test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_int_const_leading_zero.draco
proc main() void : a := 00123456789; corp;

