test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_pretend_as_identifier.draco
int pretend;
 
proc main() void : a := 1; corp;
